Copyright (C) 2002, 2003 Simon Josefsson
See the end for copying conditions.

* Version 0.3.5 (unreleased)

** The program 'idn' accepts input strings directly on the command line.

** The program 'idn' defaults to --idna-to-ascii if no parameter is given.

** The program 'idn' now print user instructions before waiting for input.

* Version 0.3.4 (released 2003-11-09)

** DocBook manuals in XML, PDF, PostScript, ASCII and HTML formats included.

* Version 0.3.3 (released 2003-10-18)

** Fixed list of Stringprep profiles in 'idn --help' and 'idn.php'.

** Fixed debug information in 'idn'.

** Internal improvements.
Leads to reduced heap memory usage.  Simplified inter-dependency among
files in lib/* to make it easier to copy them into your project.

** Debugging stringprep profile 'generic' removed.

** Punycode implementation updated to rfc3492bis-00.

** API and ABI is backwards compatible with the previous version.
stringprep_4i: NEW.
stringprep_4zi: NEW.
stringprep: CHANGED. 'profile' is marked as 'const'.
stringprep_profile: CHANGED. 'profile' is marked as 'const'.
stringprep_generic: REMOVED. Never meant for public use.

* Version 0.3.2 (released 2003-10-07)

** SASL ANONYMOUS stringprep profile "trace" added.
It is equivalent to the already supported "plain" SASL ANONYMOUS
stringprep profile, except for the name.

** API and ABI is backwards compatible with the previous version.
The 'in' parameter to stringprep_profile was changed from 'char*' to
'const char*'.

* Version 0.3.1 (released 2003-10-02)

** Fixed handling of implicit and explicit zero-length root labels in ToASCII.

** Fixed support for Hangul Syllables during Unicode NFKC normalization.

** Fixed Unicode NFKC normalization of (some) BMP code points.
This was done by syncing the NFKC code with latest GLIB, and may have
fixed other bugs in the earlier versions of the updated functions.

** Added more IDNA test vectors.

** Emacs Lisp IDNA implementation now set the UseSTD3ASCIIRules flag.