@@ -18,6 +18,7 @@ Oden Eriksson
 Gerrit P. Haase
 Trond Haugen
 Joe Hildebrand
+Graydon Hoare
 Paul Hoffman / JDNA
 Marco d'Itri
 Seungho Lee
